# iwdd

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.ipynb  test.py
config/: models_config.yaml
docs/: YOLO.md
notebooks/: test.ipynb
src/api_integration/file_servers/: .env.sample  README.md  download_data_dropbox.py  download_data_gdrive.py
src/data/: dataset.py
src/inference/: predict_ensemble.py  predict_single_model.py  utils.py
src/model/: model.py  yolo.py
src/scripts/: train.py  train_yolo.py  visualize_dataset.py
src/utils/: metrics.py  utils.py
